--- a/Handson_2_Template.ipynb
+++ b/Handson_2_Template.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
     }
    ],
    "source": [
-    "### CODE HERE ###\n",
+    "##### CODE HERE ###\n",
     "print(\"Letter Grade Converter\")\n",
     "print()\n",
     "cont = \"y\"\n",
@@ -241,20 +241,6 @@
     "    print()\n",
     "    cont = input(\"Continue? (y/n)\")\n",
     "    print()\n",
-    "while cont.lower() == \"y\":\n",
-    "    if num_grade >= 88:\n",
-    "        print(\"Letter Grade: A\")\n",
-    "    elif num_grade >= 80:\n",
-    "        print(\"Letter Grade: B\")\n",
-    "    elif num_grade >= 67:\n",
-    "        print(\"Letter Grade: C\")\n",
-    "    elif num_grade >= 60:\n",
-    "        print(\"Letter Grade: D\")\n",
-    "    else:\n",
-    "        print(\"Letter Grade: F\")\n",
-    "    print()\n",
-    "\n",
-    "\n",
     "\n",
     "print(\"Bye!\")"
    ]
@@ -346,9 +332,7 @@
     "    round(tip_amt, 2)\n",
     "    total_amt = tip_amt + meal\n",
     "    print(\"Tip Amount:\", round(tip_amt, 2))\n",
-    "    print(\"Total Amount:\", round(total_amt, 2))\n",
-    "    \n",
-    "    \n"
+    "    print(\"Total Amount:\", round(total_amt, 2))"
    ]
   },
   {
@@ -480,7 +464,6 @@
     "    quarters = tot_cents // 25\n",
     "    print(\"Quarters:\", quarters)\n",
     "    \n",
-    "    # tot_cents = tot_cents - (quarters*25)\n",
     "    tot_cents = tot_cents % 25\n",
     "    \n",
     "    dimes = tot_cents // 10\n",
@@ -546,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -561,8 +544,40 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Start Number: 90\n",
-      "Stop Number: 100\n"
+      "Start Number: 55\n",
+      "Stop Number: 44\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Please make the start number smaller than the stop number. Try again.\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Start Number: 55\n",
+      "Stop Number: 44\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Please make the start number smaller than the stop number. Try again.\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Start Number: 55\n",
+      "Stop Number: 66\n"
      ]
     },
     {
@@ -572,17 +587,18 @@
       "\n",
       "Number\tSquared\tCubed\n",
       "=====\t=======\t=====\n",
-      "90\t8100\t729000\n",
-      "91\t8281\t753571\n",
-      "92\t8464\t778688\n",
-      "93\t8649\t804357\n",
-      "94\t8836\t830584\n",
-      "95\t9025\t857375\n",
-      "96\t9216\t884736\n",
-      "97\t9409\t912673\n",
-      "98\t9604\t941192\n",
-      "99\t9801\t970299\n",
-      "100\t10000\t1000000\n"
+      "55\t3025\t166375\n",
+      "56\t3136\t175616\n",
+      "57\t3249\t185193\n",
+      "58\t3364\t195112\n",
+      "59\t3481\t205379\n",
+      "60\t3600\t216000\n",
+      "61\t3721\t226981\n",
+      "62\t3844\t238328\n",
+      "63\t3969\t250047\n",
+      "64\t4096\t262144\n",
+      "65\t4225\t274625\n",
+      "66\t4356\t287496\n"
      ]
     }
    ],
@@ -593,6 +609,12 @@
     "start = int(input(\"Start Number:\"))\n",
     "stop = int(input(\"Stop Number:\"))\n",
     "print()\n",
+    "while start > stop:\n",
+    "    print(\"Please make the start number smaller than the stop number. Try again.\")\n",
+    "    start = int(input(\"Start Number:\"))\n",
+    "    stop = int(input(\"Stop Number:\"))\n",
+    "    print()\n",
+    "\n",
     "print(\"Number\", \"Squared\", \"Cubed\", sep=\"\\t\")\n",
     "print(\"=====\", \"=======\", \"=====\", sep=\"\\t\")\n",
     "for i in range(start, stop + 1):\n",
