--- a/Handson_8_Template.ipynb
+++ b/Handson_8_Template.ipynb
@@ -59,14 +59,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "==============================\n",
+      "=======================================================\n",
       "To:      jbutt@gmail.com\n",
       "From:    noreply@deals.com\n",
       "Subject: Deals!\n",
@@ -74,8 +74,7 @@
       "Hi James,\n",
       "\n",
       "We've got some great deals for you. Check our website!\n",
-      "==============================\n",
-      "==============================\n",
+      "=======================================================\n",
       "To:      josephine_darakjy@darakjy.org\n",
       "From:    noreply@deals.com\n",
       "Subject: Deals!\n",
@@ -83,16 +82,14 @@
       "Hi Josephine,\n",
       "\n",
       "We've got some great deals for you. Check our website!\n",
-      "==============================\n",
-      "==============================\n",
+      "=======================================================\n",
       "To:      art@venere.org\n",
       "From:    noreply@deals.com\n",
       "Subject: Deals!\n",
       "\n",
       "Hi Art,\n",
       "\n",
-      "We've got some great deals for you. Check our website!\n",
-      "==============================\n"
+      "We've got some great deals for you. Check our website!\n"
      ]
     }
    ],
@@ -131,9 +128,9 @@
     "        full_email = full_email.replace(\"{email}\", email)\n",
     "        \n",
     "\n",
-    "        print(\"=\" * 30)\n",
+    "        print(\"=\" * 55)\n",
     "        print(full_email)\n",
-    "        print(\"=\" * 30)\n",
+    "        \n",
     "    \n",
     "\n",
     "\n",
